--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <!--
